# bracket

./: .envrc  .gitignore  Cargo.toml  README.md  bracket.py.in  build_uis.sh  colors.txt  flake.nix  io.github.bracket.json  io.github.zennote.json  io.github.zennote.jsonc  io.johannes.github.zennote.json  meson.build  pyproject.toml  pyrightconfig.json  zennote.py.in
bracket/: app.py  dialogs.py  directory_browser.py  editor.py  meson.build  tabview.py  theme.json  themes.py  utils.py
bracket/highlighter/: flake.nix
data/: gschemas.compiled  io.github.bracket.desktop  io.github.bracket.gresource  io.github.bracket.gresource.xml  io.github.bracket.service.in  io.github.johannes.zennote.desktop  io.github.johannes.zennote.gresource.xml  io.github.johannes.zennote.gschema.xml  io.github.johannes.zennote.service.in  io.github.zennote.gresource.xml  meson.build
data/blueprint/: directory_browser.blp  editor.blp  tabview.blp  toolbar.blp  window.blp
data/ui/: editor.ui  tabview.ui  toolbar.ui  window.ui
documentation/: Bracket.md  doc.md
gedit/: app.py
gedit/resources/: resources.gresource.xml
highlighter/: Cargo.toml  flake.nix  highlighter.pyi  package.nix
highlighter/src/: hl.rs  lib.rs
hightlighter/: Cargo.toml  flake.nix  pyproject.toml
hightlighter/src/: hl.rs  lib.rs
lsp/: Cargo.toml  flake.nix  highlighter.pyi
lsp/src/: errors.rs  lib.rs  lsclient.rs  parse.rs  pywrapper.rs  utils.rs
src/: editor.rs  main.rs  tabview.rs  toolbar.rs  utils.rs  window.rs
wheels/: highlighter-0.1.0-cp312-cp312-linux_x86_64.whl  highlighter-0.1.0-cp313-cp313-linux_x86_64.whl
zennote/: actions.py  app.py  dialogs.py  directory_browser.py  editor.py  keymap.json  meson.build  tabview.py  themes.py  zennote.py
zennote/resources/: directory_browser.ui  editor.ui  resources.gresource  resources.gresource.xml  tab_bar.ui  tabview.ui  toolbar.ui  ui.gresource  ui.gresource.xml  window.blp  window.ui
zennote/resources/styles/: style.css
zennote/ui/: editor.blp  tab_bar.blp  tabview.blp  toolbar.blp  window.blp
