
[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5", "v1_6"] }
async-channel = "2.3.1"
cascade = "1.0.1"
gtk = { version = "0.9.5", package = "gtk4", features = ["blueprint", "v4_16"] }

gtk4-sys = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
glib-build-tools = "0.20.0"
