[package]
name = "lspclient"
version = "0.1.0"
edition = "2021"

[lib]
name = "lspclient"
crate-type = ["cdylib"]

[dependencies]
lsp-types = "0.97.0"
pyo3 = { version = "0.25.0", features = ["serde", "experimental-async"] }
pythonize = "0.25.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }


[profile.release]
opt-level = 3

[[bin]]
name = "lspdebug"
path = "src/bin/lspdebug.rs"
